# miseban-ai

./: .gitignore  .gitleaks.toml  Cargo.toml  Dockerfile.agent  Dockerfile.api  Dockerfile.web  LICENSE  Makefile  QUICKSTART.md  README.md  config.example.toml  deny.toml  fly.api.toml  fly.web.toml  nginx.conf  rust-toolchain.toml
.github/workflows/: ci.yml  release-agent.yml
crates/agent/: Cargo.toml
crates/agent/src/: buffer.rs  main.rs  scanner.rs  setup.rs
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: alerts.rs  auth.rs  billing.rs  csv_export.rs  db.rs  line.rs  main.rs  plan_guard.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
docs/: ad-validation-test.md  customer-interview-guide.md  partner-page-draft.md  pitch-deck-outline.md  press-release-2026-02-25.md  press-release-final-2026-02-25.md  privacy-policy-template.md  release-checklist-2026-02-25.md  reseller-program.md  sns-posts-2026-02-25.md  store-signage-template.md
docs/it-hojo/: 01-registration-checklist.md  02-it-tool-registration.md  03-service-description.md
migrations/: 001_init.sql  002_pairing_codes.sql
mobile/: README.md
mobile/android/app/src/main/java/com/misebanai/agent/: MainActivity.kt
mobile/ios/MisebanAgent/: AgentViewModel.swift  ContentView.swift
scripts/: discover-cameras.sh  download-model.sh  install.sh  release.sh  test_camera.py
supabase/: schema.sql
tasks/: todo.md
tasks/agents/: README.md  team.json
web/dashboard/: index.html
web/landing/: 404.html  cameras.html  contact.html  docs.html  download.html  index.html  legal.html  privacy.html  robots.txt  sitemap.xml  team.html  terms.html
web/landing/blog/: 001-hello-world.html  002-architecture.html  003-claude-code-diary.html  004-hardware-design.html  005-product-meeting.html  006-meeting-decisions.html  007-strategy-execution.html  008-release-meeting.html  009-release-decisions.html  010-multiproduct-meeting.html  011-multiproduct-decisions.html  012-prompt-driven-development.html  013-sprint-cycle-1.html  014-sprint-cycle-2.html  015-sprint-cycle-3.html  016-sprint-cycle-4.html  017-sprint-cycle-5.html  018-sprint-cycle-6.html  019-sprint-cycle-7.html  020-team-meeting-beta.html  021-sprint-cycle-9.html  022-prompt-driven-dev-diary.html  023-sprint-cycle-10.html  024-release-meeting.html  025-sprint-cycle-12.html  026-sprint-cycle-13.html  027-sprint-cycle-14.html  028-sprint-cycle-15.html  029-sprint-cycle-16.html  030-sprint-cycle-17.html  031-sprint-cycle-18.html  032-eve-of-launch.html  033-ai-store-analytics-guide.html  034-service-launch.html  index.html
