[package]
name = "ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["real"]
mock = []
real = ["ort", "ndarray", "image"]

[dependencies]
shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

# Real inference dependencies (only compiled when `real` feature is active)
ort = { version = "=2.0.0-rc.9", optional = true }
ndarray = { version = "0.16", optional = true }
image = { version = "0.24", default-features = false, features = ["jpeg"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
