[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
ai = { path = "../ai", default-features = false, features = ["mock"] }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
jsonwebtoken = "9"
dotenvy = "0.15"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
bcrypt = "0.16"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
